--- a/src/views/planejar.html
+++ b/src/views/planejar.html
@@ -20,7 +20,9 @@
       <a href="cadastro.html" class="btn-cadastro">Cadastre-se ou faça login</a> <!-- CTA de cadastro/login -->
     </nav>
   </header>
-
+    <div style="position:fixed; margin-top: -12vh; z-index: 100;">
+    <img class="llogo" src="../../public/logos/llogo.png" alt="Logo Explora" />
+  </div>
   <!-- ===== SEÇÃO PRINCIPAL: PASSO A PASSO DO PLANEJAMENTO ===== -->
   <section class="plan-section container"> <!-- bloco com cartão translúcido e grid -->
     <h2>Planeje sua viagem</h2> <!-- título da seção -->
